<resources>
    <string name="app_name">Android lab</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more Info</string>
    <string name="GUI">Look at my GUI</string>
    <string name="btntext">Click me</string>
    <string name="check">Check this out!</string>
    <string name="swh">Switch on/off</string>
    <string name="tl">Type here</string>
    <string name="EmailPrompt">Enter yur email address:</string>
    <string name="teh">Type email here</string>
    <string name="PwPrompt">Type your password:</string>
    <string name="logbtn">LOGIN</string>
    <string name="yp">Your profile</string>
    <string name="yn">Your name:</string>
    <string name="eyn">Enter your name</string>
    <string name="ye">Your email:</string>
    <string name="eye">Enter your email</string>
    <string name="ypic">Your picture:</string>
    <string name="ctbtn">Click the button above to take a picture</string>
    <string name="gchat">Go to chat</string>
    <string name="Tx">Send</string>
    <string name="Rx">Receive</string>
    <string name="hint">type here</string>
</resources>