<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GUI"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:text="@string/btntext" />

    <CheckBox
        android:id="@+id/radioButton2"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button2"
        android:text="@string/check" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioButton2"
        android:layout_alignTop="@id/imageView"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/swh" />
    <EditText
        android:id="@+id/edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/imageView"
        android:text="@string/tl"/>
</RelativeLayout>