<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">
    <ListView
        android:id="@+id/TheListView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
       android:layout_weight="1"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/Txbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tx"
        android:layout_weight="1"
        />
    <EditText
        android:id="@+id/ChatInput"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:text="@string/hint"
        />
    <Button
        android:id="@+id/Rebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rx"
        android:layout_weight="1"
        />
    </LinearLayout>

</LinearLayout>